# GSELogger

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test.yml
gselogger/: __init__.py  _version.py  logger_model.py
tests/: test_logger_model.py
