# ----------------------------------------------------------------------
# GSELogger - Python logging model for any python application.
# Author: Christofanis Skordas (skordasc@uchicago.edu)
# Copyright (C) 2023  GSECARS, The University of Chicago, USA
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------

[metadata]
name = GSELogger
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
description = Python logging model for any python application.
license_file = LICENSE
long_description = file: README.mb
long_description_content_type = text/markdown
url = https://github.com/GSECARS/GSELogger
project_urls =
    Bug Tracker = https://github.com/GSECARS/GSELogger/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
package_dir =
    =.
packages = find:
zip_safe = False
install_requires =
python_requires = >=3.10

[options.extras_require]
testing =
    versioneer>=0.28
    flake8>=6.0.0
    mypy>=1.0.1
    pytest>=7.2.1
    pytest-cov>=4.0.0
    tox>=4.4.6

[options.package_data]
gselogger = py.typed

[versioneer]
VCS = git
style = pep440
versionfile_source = gselogger/_version.py
versionfile_build = gselogger/_version.py
tag_prefix = ''
parentdir_prefix = ''

[flake8]
max-line-length = 160

[tox:tox]
minversion = 3.24.5
envlist =
    py310
    py311
    flake8
isolated_build = true

[testenv]
description = Run tests suite under {envlist}
deps =
    -rrequirements_dev.txt
commands =
    pytest --basetemp={envtmpdir}

[testenv:flake8]
deps = flake8
commands = flake8 gselogger tests